--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,9 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+/* body {
+  @apply bg-black text-gray-100;
+} */
 
 @theme inline {
   --color-background: var(--background);
