--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,9 @@
 /* body {
   @apply bg-black text-gray-100;
 } */
-
+* {
+  cursor: none;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
